# EWH_simulator

./: .gitignore  README.md  pyproject.toml
ewh_model/: ewh_fleet.py  single_ewh.py
optimization_algorithms/: dispatcher.py
simulation_runner/: simulation_env.py
tests/: test_options.py  test_power_cap.py  test_power_reduction.py
utils/: data_handling.py  plotting.py  simon.py
water_consumption/: belgium.py  comparison.py  stochastic_generator_improved.py  stochastic_profile.py
